--- a/basis_js/promises/fetch_test/index.html
+++ b/basis_js/promises/fetch_test/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <p id="categories"></p>
+    <h1>Categories</h1>
+    <ul id="categories"></ul>
+    <h1>Joke of the day</h1>
     <p id="joke"></p>
     <script src="script.js"></script>
 </body>
