--- a/basis_js/promises/marvel_api/index.html
+++ b/basis_js/promises/marvel_api/index.html
@@ -13,6 +13,21 @@
     <ul id="character_list">
 
     </ul>
+    <div>
+        <button id="first">first</button>
+        <button id="previous">previous</button>
+        <span id="pagination"></span>
+        <button id="next">next</button>
+        <button id="last">last</button>
+    </div>
+    <br>
+    <div id="limit">
+        <span>show</span>
+        <button>9</button>
+        <button>18</button>
+        <button>36</button>
+        <span>elements</span>
+    </div>
     <br>
     <h2 id="stories_about"></h2>
     <ul id="stories_list">
